# FenwickTree

./: .gitignore  .travis.yml  FenwickTree.cabal  README  README.md  changelog  test_FenwickTree.hs
Data/Tree/: Fenwick.hs  FenwickTree.hs
tests/: test_Fenwick.hs
