name:                FenwickTree
version:             0.1
stability:           alpha
homepage:            https://github.com/mgajda/FenwickTree
package-url:         http://hackage.haskell.org/package/FenwickTree
synopsis:            Data structure for fast query and update of cumulative sums, with inverse query option.
description:         Fenwick trees are a O(log N) data structure for updating cumulative sums,
                     here with an option to find an element at which
                     cumulative sum reaches certain value.
                     This implementation allows for storage of arbitrary information in the nodes,
                     and real-valued components of the sum.
category:            Data Structures
license:             BSD3
license-file:        LICENSE

author:              Michal J. Gajda
copyright:           Copyright by Michal J. Gajda '2013
maintainer:          mjgajda@googlemail.com
bug-reports:         mailto:mjgajda@googlemail.com

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.4.2
data-files:          README

source-repository head
  type:     git
  location: git://github.com:mgajda/FenwickTree.git

Library
  ghc-options:      -fspec-constr-count=4 -O3 
  build-depends:    base>=4.0, base <4.7, template-haskell, QuickCheck >= 2.5.0.0
  other-extensions:       ScopedTypeVariables OverloadedStrings BangPatterns NoMonomorphismRestriction
  other-modules:    
  exposed-modules:  Data.Tree.FenwickTree
  exposed:          True

